--- a/old_course/material/projeto-glass-html5/_css/estilo.css
+++ b/old_course/material/projeto-glass-html5/_css/estilo.css
@@ -42,3 +42,29 @@ figure.foto-legenda figcaption {
 figure.foto-legenda:hover figcation {
 	opacity: 1;
 }
+
+/* Formatação do Menu */
+
+nav#menu {
+	display: block;
+
+}
+
+nav#menu ul {
+	list-style: none;
+	text-transform: uppercase;
+	position: absolute;
+	top: -15px;
+	left: 500px;
+}
+
+nav#menu li {
+	display: inline-block;
+	background-color: lightgray;
+	padding: 10px;
+	margin: 2px;
+}
+
+nav#menu h1 {
+	display: none;
+}
