--- a/old_course/material/projeto-glass-html5/_css/estilo.css
+++ b/old_course/material/projeto-glass-html5/_css/estilo.css
@@ -63,8 +63,23 @@ nav#menu li {
 	background-color: lightgray;
 	padding: 10px;
 	margin: 2px;
+	transition: background-color 0.5s;
+}
+
+nav#menu li:hover {
+	background-color: #606060;
 }
 
 nav#menu h1 {
 	display: none;
+}
+
+nav#menu a {
+	color: black;
+	text-decoration: none;
+
+}
+
+nav#menu a:hover {
+	color: #ffffff;
 }
