--- a/old_course/material/projeto-glass-html5/_css/estilo.css
+++ b/old_course/material/projeto-glass-html5/_css/estilo.css
@@ -6,10 +6,48 @@ p {
     }
 
 body{
-        background-color: hsl(165,81,82);
+        background-color: #dddddd;
         color: rgba(0,0,0, 0.8);
             
-    }
+	}
+	
+div#interface {
+	width: 900px;
+	background-color: #fffffe;
+	margin: -20px auto 0px auto;
+	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+	padding: 10px 15px 10px 15px;
+}
+
+header#cabecalho img#icone {
+	position: absolute;
+	left: 960px;
+	top: 70px;
+}
+
+header#cabecalho {
+	border-bottom: 1px #606060 solid;
+	height: 150px;
+	background: url('../_imagens/glass-logo-peq.jpg') no-repeat 0px 95px;
+
+}
+
+header#cabecalho h1{
+	font-family: Arial, sans-serif;
+	font-size: 30pt;
+	color: #606060;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+	padding: 0px;
+	margin-bottom: 0px;
+}
+
+header#cabecalho h2{
+	font-family: Arial, sans-serif;
+	color: #888888;
+	font-size: 15pt;
+	padding: 0;
+	margin-top: 7px;
+}
 
 /* Formatação de imagens com legendas */
 
