--- a/old_course/material/projeto-glass-html5/_css/estilo.css
+++ b/old_course/material/projeto-glass-html5/_css/estilo.css
@@ -1,4 +1,9 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
+@font-face {
+	font-family: 'fonteLogo';
+	src: url('../_fonts/bubblegum-sans-regular.otf');
+}
 
 p {
     text-align: justify;
@@ -33,16 +38,16 @@ header#cabecalho {
 }
 
 header#cabecalho h1{
-	font-family: Arial, sans-serif;
+	font-family: 'fonteLogo', sans-serif;
 	font-size: 30pt;
 	color: #606060;
-	text-shadow: 1px 1px 1px rgba(0,0,0,0.6);
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 	padding: 0px;
 	margin-bottom: 0px;
 }
 
 header#cabecalho h2{
-	font-family: Arial, sans-serif;
+	font-family:'Titillium Web', sans-serif;
 	color: #888888;
 	font-size: 15pt;
 	padding: 0;
