--- a/old_course/material/projeto-glass-html5/_css/estilo.css
+++ b/old_course/material/projeto-glass-html5/_css/estilo.css
@@ -13,7 +13,7 @@ p {
 body{
         background-color: #dddddd;
         color: rgba(0,0,0, 0.8);
-            
+        font-family: Arial, sans-serif;
 	}
 	
 div#interface {
@@ -22,6 +22,15 @@ div#interface {
 	margin: -20px auto 0px auto;
 	box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
 	padding: 10px 15px 10px 15px;
+}
+
+a {
+	color: #1e128b;
+	text-decoration: none;
+}
+
+a:hover {
+	text-decoration: underline;
 }
 
 header#cabecalho img#icone {
@@ -129,12 +138,46 @@ nav#menu a:hover {
 
 section#corpo {
 	display: block;
-	width: 540px;
+	width: 530px;
 	float: left;
 	border-right: 1px solid #606060;
 	padding-right: 20px;
 }
 
+article#noticia-principal h2 {
+	font-size: 12pt;
+	color: #606060;
+	background-color: #dddddd;
+	padding: 5px 0px 5px 10px;
+	margin: 10px 0px 10px 0px;
+}
+
+header#cabecalho-artigo h1 {
+	font-family: "fonteLogo", sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-bottom: 0px;
+	margin-top: 0px;
+}
+
+.direita {
+	text-align: right;
+	margin-top: 0px;
+}
+
+header#cabecalho-artigo h2 {
+	font-size: 11pt;
+	color: #cecece;
+	background-color: #ffffff;
+	margin: 0px;
+
+}
+
+header#cabecalho-artigo h3 {
+	font-size: 10pt;
+	color: #606060;
+	margin: 5px;
+}
 table#tabelaspec {
 	border: 1px solid #606060;
 	border-spacing: 0px;
@@ -145,14 +188,58 @@ table#tabelaspec {
 table#tabelaspec td {
 	border: 1px solid #606060;
 	padding: 10px;
-	text-align: center;
+	}
+
+table#tabelaspec td.ce {
+	color: #ffffff;
+	background-color: #505050;
+	text-align: right;
+	vertical-align: top;
+	font-weight: bold;
+}
+
+table#tabelaspec td.cd {
+	background-color: #cecece;
+	text-align: left;
+}
+
+table#tabelaspec caption {
+	color: #606060;
+	font-size: 12pt;
+	font-weight: bolder;
+}
+
+table#tabelaspec caption span {
+	display: block;
+	float: right;
+	font: #000000;
+	font-size: 8pt;
+	margin-top: 8px;
 }
 
 aside#lateral {
 	display: block;
 	width: 320px;
 	float: right;
+	background-color: #dddddd;
+	padding: 10px;
+	margin-top: 10px;
+	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.4);
 }
+
+aside#lateral h1 {
+	font-family: 'fonteLogo', sans-serif;
+	font-size: 20pt;
+	color: #606060;
+	margin-top: 0px;
+}
+
+aside#lateral h2 {
+	background-color: #606060;
+	font-size: 12pt;
+	color: #ffffff;
+	padding: 10px;
+	}
 
 footer#rodape {
 	clear: both;
