--- a/old_course/material/projeto-glass-html5/_css/fotos.css
+++ b/old_course/material/projeto-glass-html5/_css/fotos.css
@@ -8,61 +8,40 @@ ul#album-fotos {
     list-style: none;
 }
 
-ul#album-fotos li:hover {
-    -webkit-transform: scale(1.5);
-}
-
 ul#album-fotos li {
     float: left;
     width: 200px;
     height: 200px;
     margin: 10px;
     border: 5px solid whitesmoke;
-    background-color: #ffffff;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
-    -webkit-transition: all 0.3s ease-in-out;
+    background-position: 50% 50%;
+    background-size: 400px 400px;
+    background-color: lightgray;
 }
 
 ul#album-fotos li#foto01 {
     background: url('../_imagens/galeria-01.jpg') no-repeat;
-    background-position: 50% 50%;
-    background-size: 400px 400px;
-    background-color: red;
 }
 
 ul#album-fotos li#foto02 {
     background: url('../_imagens/galeria-02.jpg') no-repeat;
-    background-position: 50% 50%;
-    background-size: 400px 400px;
-    background-color: red;
 }
 
 ul#album-fotos li#foto03 {
     background: url('../_imagens/galeria-03.jpg') no-repeat;
-    background-position: 50% 50%;
-    background-size: 400px 400px;
-    background-color: red;
 }
 
 ul#album-fotos li#foto04 {
     background: url('../_imagens/galeria-04.jpg') no-repeat;
-    background-position: 50% 50%;
-    background-size: 400px 400px;
-    background-color: red;
 }
 
 ul#album-fotos li#foto05 {
     background: url('../_imagens/galeria-05.jpg') no-repeat;
-    background-position: 50% 50%;
-    background-size: 400px 400px;
-    background-color: red;
 }
 
 ul#album-fotos li#foto06 {
     background: url('../_imagens/galeria-06.jpg') no-repeat;
-    background-position: 50% 50%;
-    background-size: 400px 400px;
-    background-color: red;
 }
 
 ul#album-fotos li span {
@@ -79,32 +58,9 @@ ul#album-fotos li:hover span {
     opacity: 1;
 }
 
-ul#album-fotos li#foto01:hover {
+ul#album-fotos li:hover {
     background-position: 0px 0px;
     background-size: 200px 200px;
-}
-
-ul#album-fotos li#foto02:hover {
-    background-position: 0px 0px;
-    background-size: 200px 200px;
-}
-
-ul#album-fotos li#foto03:hover {
-    background-position: 0px 0px;
-    background-size: 200px 200px;
-}
-
-ul#album-fotos li#foto04:hover {
-    background-position: 0px 0px;
-    background-size: 200px 200px;
-}
-
-ul#album-fotos li#foto05:hover {
-    background-position: 0px 0px;
-    background-size: 200px 200px;
-}
-
-ul#album-fotos li#foto06:hover {
-    background-position: 0px 0px;
-    background-size: 200px 200px;
-}
+    transform: scale(1.5);
+    transition: all 0.3s ease-in-out;
+   }
