--- a/old_course/material/projeto-glass-html5/_css/fotos.css
+++ b/old_course/material/projeto-glass-html5/_css/fotos.css
@@ -15,10 +15,20 @@ ul#album-fotos li {
     margin: 10px;
     border: 5px solid whitesmoke;
     box-shadow: 2px 2px 10px rgba(0,0,0,0.4);
-    background-position: 50% 50%;
-    background-size: 400px 400px;
     background-color: lightgray;
+    transition: all 0.3s ease-in-out;
 }
+
+ul#album-fotos li {
+    background-position: 50% 50%;
+    background-size: 400px 400px;    
+}
+
+ul#album-fotos li:hover {
+    background-position: 0px 0px;
+    background-size: 200px 200px;
+    transform: scale(1.5);
+   }
 
 ul#album-fotos li#foto01 {
     background: url('../_imagens/galeria-01.jpg') no-repeat;
@@ -57,10 +67,3 @@ ul#album-fotos li span {
 ul#album-fotos li:hover span {
     opacity: 1;
 }
-
-ul#album-fotos li:hover {
-    background-position: 0px 0px;
-    background-size: 200px 200px;
-    transform: scale(1.5);
-    transition: all 0.3s ease-in-out;
-   }
